--- a/stilts.css
+++ b/stilts.css
@@ -9,7 +9,7 @@ body{
     font-family: 'Open Sans', sans-serif;
     /*background-color: #1d52c5;*/
     color: rgb(255,255,255);
-    background-image: linear-gradient(to right,#2a9215,#28461d);
+    background-image: linear-gradient(to right,#159281,#341d46);
     margin: 0;
 }
 .bg {
