--- a/stilts.css
+++ b/stilts.css
@@ -13,7 +13,7 @@ body{
     margin: 0;
 }
 .bg {
-    background-image: linear-gradient(to right,rgb(90, 21, 84),rgb(127, 167, 82));
+    background-image: linear-gradient(to left,#159281,#341d46);
 }
 
 .main,.main a:visited{
@@ -37,6 +37,7 @@ font-family: 'Shizuru', cursive;
 p{
   
     font-family: 'Lobster', cursive;
+    color: rgb(255, 255, 255);
     
 }
 h4{
@@ -47,7 +48,7 @@ h4{
    
 }
 blockquote{
-    font-family: 'Fredericka the Great', cursive;
+    font-family: 'Lobster', cursive;
 }
 .topnav{
     display: flex;
