--- a/stilts.css
+++ b/stilts.css
@@ -43,7 +43,7 @@ p{
 h4{
     
     font-weight: 400;
-    
+    color: rgb(255, 255, 255);
     font-family: 'Fredericka the Great', cursive;
    
 }
